# youtubetb-refactored

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTO_SETUP.bat  BATCH_CONTINUE_FIX.md  CHANGELOG.md  CLEANUP_REPORT.md  FALLBACK_SYSTEM_REPORT.md  INSTALL.md  INSTALLATION_FAILED_SUMMARY.md  INSTALL_DEPENDENCIES.bat  INSTALL_FROM_ZERO.bat  LICENSE  QUICK_FIX.bat  QUICK_SETUP.md  QUICK_START.md  README.md  REFACTORING_CHANGELOG.md  REQUIREMENTS_SYSTEM.txt  RESUME_FROM_FAILED_STAGE.md  SETUP_ALL.bat  SETUP_TEST_REPORT.md  TRANSCRIBE_TROUBLESHOOTING.md  YOUTUBE_SYNC_CHANGELOG.md  YOUTUBE_SYNC_QUICKSTART.md  add_api_key.py  add_key.bat  books.txt  books_examples.txt  check_database.py  check_paths_compatibility.py  check_system.py  colab_setup.txt  convert_cookies.py  cookies_helper.py  coverage.xml  encrypt_now.bat  generate_youtube_token.py  (+30 more)
.github/: copilot-instructions.md
cache/: book_names.json
config/: prompts copylast.json  prompts copylatest.json  prompts.json  settings.json  template.html
docs/: AMAZON_COOKIES_GUIDE.md  API_KEYS_STATUS_REPORT.md  API_KEY_FALLBACK.md  AUTO_CONTINUE_MODE.md  BATCH_TRANSLATION_OPTIMIZATION.md  CHANGELOG.md  COOKIES_FALLBACK_SYSTEM.md  COOKIES_HELPER_IMPLEMENTATION.md  COOKIES_HELPER_IMPROVEMENTS.md  COOKIES_HELPER_PLAN.md  COOKIES_SETUP.md  COVER_FETCHER_GUIDE.md  DATABASE_NONETYPE_FIX.md  DUPLICATE_CHECK_SYSTEM.md  EMPTY_FOLDER_CLEANUP_FIX.md  FILE_STRUCTURE.md  FIX_YOUTUBE_QUOTA.md  FONT_PROFILE_IMPLEMENTATION.md  FONT_PROFILE_SYSTEM.md  IMPLEMENTATION_REVIEW.md  INSTALL.md  INSTALL_SYSTEM.md  LOGIC_AUDIT.md  ONE_COMMAND_INSTALL.md  PEXELS_FALLBACK_SYSTEM.md  PYTHON_VERSION_FIX.md  RELEASE_NOTES_v2.1.0.md  STORAGE_COMPATIBILITY_FINAL.md  STORAGE_LOCATIONS.md  THUMBNAIL_CODE_REVIEW.md  THUMBNAIL_FIX.md  YOUTUBE_API_400_DIAGNOSIS.md  YOUTUBE_API_FIX_FINAL.md  YOUTUBE_TAGS_OFFICIAL_LIMITS.md
scripts/: README.md  add_api_key.py  analyze_tags_seo.py  check_cover_dimensions.py  check_youtube_token.py  close_brave_and_extract.bat  decrypt_secrets.py  encrypt_secrets.py  export_cookies.py  extract_cookies.py  fix_parents.py  generate_bebas_xl.py  portrait_bonus_results.md  quick_test_single.py  quick_thumbnail.py  setup_colab.py  setup_colab.sh  show_titles.py  test_3_words.py  test_3words_thumbnail.py  test_5words.py  test_all_apis.py  test_amazon_cover.py  test_api_fallback.py  test_artofwar.py  test_auto_refresh.py  test_autofix_duration.py  test_batch_translation.py  test_chapters_debug.py  test_chapters_from_log.py  test_cookies_fallback.py  test_db_none.py  test_db_none_fix.py  test_duplicate_folder_cleanup.py  test_font_profiles.py  test_force_refresh.py  test_gemini_tags.py  test_googlebooks_cover.py  test_impact_fix.py  test_integrated_tags.py  (+17 more)
secrets_encrypted/: .env.enc  README.md  api_key.txt.enc  api_keys.txt.enc  client_secret.json.enc  cookies.20251031_151208.bak.enc  cookies.txt.enc  (+13 more)
(+91 files in other folders)
